Salir de pantalla completa
Ya se puede sarlir de pantalla completa. Se eliminaron archivos sobrantes.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eva-app",
-  "productName": "Product Electron App",
+  "productName": "Eva",
   "version": "1.0.0",
   "description": "Eva eyes and control app",
   "main": "src/index.js",
